# el2nixpkgs

./: .gitignore  CHANGELOG.md  default.nix  el2nixpkgs.cabal  flake.nix  shell.nix
app/: Main.hs
lib/: Lib.hs  Lisp.hs
nix/: nixpkgs.nix
