cabal-version:      2.4
name:               el2nixpkgs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             erikbackman
maintainer:         erikbackman@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
        hs-source-dirs: lib
        exposed-modules:
                  Lisp
        build-depends:
                  base
                , parsec
                , text
        default-language: Haskell2010
        ghc-options:
          -fwarn-unused-imports
          -Wno-missing-home-modules
          -O2
                    
executable el2nixpkgs
    main-is:          Main.hs

    build-depends:      base
                      , el2nixpkgs
                      , directory
    hs-source-dirs:   app
    default-language: Haskell2010
